2000-12-13  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.c (scm_init_numbers):  Re-introduced bindings for
	most-positive-fixnum and most-negative-fixnum as requested by
	Mikael Djurfeldt.

2000-12-12  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	The variable scm_symbols is made static within symbols.c and
	renamed to symbols.  The initialization of the symbols hash table
	is done in function scm_symbols_prehistory.

	* gc.c (scm_init_storage):  Don't initialize scm_symbols.  Don't
	define most-positive-fixnum, most-negative-fixnum and
	bignum-radix.

	* init.c (scm_init_guile_1):  Call scm_symbols_prehistory.

	* root.h (scm_symbols):  Not in scm_sys_protects any more.

	* symbols.c (symbols):  Renamed from scm_symbols and made static.

	(scm_mem2symbol):  scm_symbols is renamed to symbols.

	* symbols.[ch] (scm_symbols_prehistory):  Added.

2000-12-12  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* gc.c (scm_init_storage), root.h (scm_weak_symhash, scm_symbols):
	Removed the former scm_weak_symhash hash table.  Added scm_symbols
	hash table.

	* stacks.c (get_applybody):  scm_sym2vcell may return #f.

	* symbols.c (scm_mem2symbol):  This function is now responsible
	for creating symbol objects and storing them in the global
	scm_symbols hash table.

	(scm_str2symbol):  Rewritten in terms of scm_mem2symbol.

	(scm_sym2vcell):  For system bindings, there is now only one
	obarray - scm_symhash.  If scm_sym2vcell is called to look up a
	symbol that can't be found and shall not be created, #f is
	returned.  Most callers of scm_sym2vcell have expected this
	behaviour anyway.

	(scm_intern_obarray_soft):  Removed reference to scm_weak_symhash
	from comment.

	(scm_intern_obarray_soft, scm_sysintern0_no_module_lookup):  These
	functions are not responsible for symbol creation any more, only
	for creation of bindings.

	(scm_symbol_value0):  Don't use scm_intern_obarray_soft to create
	a symbol object.

	(scm_symbol_interned_p):  scm_weak_symhash is removed.
